--- a/demo_BMI-calculator/index.html
+++ b/demo_BMI-calculator/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>BMI Calculator</title>
 </head>
 <body>
-    <h1 id="title">todo list</h1>
-    <input id="txt" type="text" placeholder="請輸入內容...">
+    <h1 id="title">BMI Calculator</h1>
+    <p>請輸入體重（kg）：</p>
+    <input id="weight" type="text" placeholder="請輸入體重">
+    <p>請輸入身高（cm）：</p>
+    <input id="height" type="text" placeholder="請輸入身高...">
     <input id="btn" type="button" value="送出">
-    <ul id="list"></ul>
+    <p>
+        BMI值：
+        <span id="bmiresult"></span>
+    </p>
+    <!-- <ul id="list"></ul> -->
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
 
@@ -29,34 +36,35 @@
         // Initialize Fire
         firebase.initializeApp(firebaseConfig)
 
-        var txt = document.getElementById('txt')
+        var weight = document.getElementById('weight')
+        var height = document.getElementById('height')
         var btn = document.getElementById('btn')
-        var list = document.getElementById('list')
+        var bmiresult = document.getElementById('bmiresult')
         // todos
-        var todos = firebase.database().ref('todos')
+        var bmiDatas = firebase.database().ref('bmidatas')
 
         // 點擊送出，寫入資料庫
         btn.addEventListener('click', function(e) {
-            // console.log(txt.value)
-            todos.push({ content: txt.value})
+            console.log(weight.value)
+            let w = weight.value
+            let h = (height.value) / 100
+            let result = w / (h*h)
+            console.log(result)
+            bmiDatas.set({ bmivalues: result})
         })
 
         // 讀取資料庫，顯示資料
-        todos.on('value', function(snapshot){
+        bmiDatas.on('value', function(snapshot){
             console.log(snapshot.val())
             var str = ''
             var data = snapshot.val()
-            for( var item in data) {
-                // console.log(data[item].content)
-                str+= `<li data-key='${item}' onclick="remove('${item}')">${data[item].content}</li>`
-            }
-            list.innerHTML = str
+            bmiresult.innerHTML = data.bmivalues
         })
 
-        function remove(data) {
-            console.log('remove', data)
-            todos.child(data).remove()
-        }
+        // function remove(data) {
+        //     console.log('remove', data)
+        //     todos.child(data).remove()
+        // }
     </script>
 </body>
 </html>
